# Spectral-Based-Mesh-Segmentation

./: CMakeLists.txt  README.md
Header Files/: Camera.h  Mesh.h  MeshRenderer.h  STriangle.h  SVertex.h  Shader.h  Window.h
Shaders/: fragmentShader.glsl  vertexShader.glsl
Source Files/: Camera.cpp  Mesh.cpp  MeshRenderer.cpp  Shader.cpp  Window.cpp  main.cpp
